<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="LabelFor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/run" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_y_apellidos"
        android:id="@+id/textView3"
        android:layout_below="@+id/editText1"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:layout_alignEnd="@+id/editText1"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        android:id="@+id/textView4"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_below="@+id/textView4"
        android:layout_alignEnd="@+id/editText2"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_mero"
        android:id="@+id/textView5"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editText3"
        android:inputType="text"
        android:layout_alignParentEnd="false"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alta"
        android:id="@+id/button"
        android:layout_below="@+id/editText4"
        android:layout_alignParentStart="true"
        android:onClick="alta" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consulta_dni"
        android:id="@+id/button2"
        android:onClick="consulta"
        android:layout_alignTop="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baja"
        android:id="@+id/button3"
        android:onClick="baja"
        android:layout_alignTop="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modificaci_n_de_datos"
        android:id="@+id/button4"
        android:onClick="modificacion"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:layout_marginTop="55dp" />

</RelativeLayout>